[package]
name = "pyo3-loom"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Riefman"]
keywords = ["pyo3", "maturin", "numpy", "python"]
license = "GPL-3"
repository = "https://github.com/joshuaRiefman/pyo3-loom.git"
categories = ["rust-patterns", "development-tools::ffi", "development-tools"]
description = "A crate for effortlessly creating Python bindings, including involving NumPy, to Rust source code with PyO3"

[lib]
proc-macro = true

[dependencies]
numpy = "0.20.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
syn = "2.0.71"
quote = "1.0.36"
pyo3-macros = "0.22.2"
